updated main page

--- a/config.yaml
+++ b/config.yaml
@@ -16,3 +16,4 @@ params:
     product_link: /blog/
     company: 	    Paige Bennett
     portfolio_link: /portfolio/
+    linkedin:     paigebennett
