Adds Contact Form Page

--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,7 @@ params:
     twitter:      paigenomadgirl
     about_link:   /about/
     product_link: /blog/
+    contact_link: /contact/
     company: 	    Paige Bennett
     portfolio_link: /portfolio/
     linkedin:     paigebennett
