--- a/config.yaml
+++ b/config.yaml
@@ -19,9 +19,9 @@ params:
     portfolio_link: /portfolio/
     linkedin:     paigebennett
   portfolio:
-    title:        "Portfolio Of Awesome Stuff"
-    subtitle:     "Some of my selected works"
+    title:        "My Work"
+    subtitle:     "A littl of this. A little of that."
   header:
-    lead_in:      "I'm a UX Research Designer!"
-    heading:      "Check me out!"
-    more_button:  "Scroll down..."
+    lead_in:      "Hi. I'm a UX Designer and User Researcher"
+    heading:      "It's nice to meet you."
+    more_button:  "See More"
